--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@
 }
 
 .logo img{
-    width: 350px;
-    padding-left: 90px;
+    width: 450px;
+    padding-left: 200px;
     padding-top: 30px;
 }
 
@@ -50,29 +50,33 @@
 }
 
 main{
-    padding-left: 90px;
+    padding-left: 200px;
     padding-top: 30px;
 }
 
+
 main h1{
+    padding-top: 90px;
     color: rgb(223, 164, 77);
     position: relative;
-    font-size: 100px;
+    font-size: 120px;
+    font-family: 'Frank Ruhl Libre', serif;
 }
 
 main h2{
-    font-size: 30px;
+    font-size: 60px;
+    font-family: 'Old Standard TT', serif;
 }
 
 main p{
-    font-size: 25px;
-    font-weight: 200;
-    max-width: 800px;
+    padding-top: 50px;
+    font-size: 22px;
+    max-width: 380px;
 }
 
 .prato img{
-    width: 400px;
+    width: 500px;
     position: absolute;
-    left: 800px;
-    top: 150px;
+    left: 780px;
+    top: 120px;
 }
