--- a/style.css
+++ b/style.css
@@ -8,22 +8,22 @@
     width: 100vw;
     overflow: hidden;
     height: 100vh;
-    font-size: 20px;
     background-repeat: no-repeat;
     background: linear-gradient( to right, rgb(255, 255, 255) 70%, rgb(228, 82, 25) 30%);
 }
 
 .menu{
     display: flex;
-    list-style: none;
     float: right;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .menu li{
+    font-size: 20px;
     float: left;
-    padding-right: 70px;
+    padding-right: 80px;
     padding-top: 50px;
+    list-style: none;
 }
 
 .titulo1 li a{
@@ -36,42 +36,56 @@
     color: white;
 }
 
+.barras img{
+    width: 120px;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
 .logo img{
-    width: 450px;
-    padding-left: 200px;
-    padding-top: 30px;
+    width: 200px;
+    margin-left: 30px;
 }
 
 .lupa img{
-    width: 40px;
+    width: 38px;
     position:absolute;
-	margin-left:950px;
-	margin-top:45px;
+	margin-left: 930px;
+	margin-top:45px; 
 }
 
 main{
-    padding-left: 200px;
-    padding-top: 30px;
+    margin-left: 150px;
+    /* margin-top: 20px; */
 }
 
+main .meio{
+    flex-direction: row;
+    align-items: center;
+    margin-top: -200px;
+} 
 
 main h1{
-    padding-top: 90px;
     color: rgb(223, 164, 77);
-    position: relative;
+    /* position: relative; */
     font-size: 120px;
     font-family: 'Frank Ruhl Libre', serif;
 }
 
 main h2{
-    font-size: 60px;
+    font-size: 50px;
     font-family: 'Old Standard TT', serif;
 }
 
+/* .nes{
+    margin-top: 1060px;
+    margin-left: -1400px;
+    transform: rotate(90deg);
+} */
+
 main p{
-    padding-top: 50px;
-    font-size: 22px;
-    max-width: 380px;
+    font-size: 20px;
+    max-width: 360px;
 }
 
 .prato img{
@@ -79,4 +93,60 @@ main p{
     position: absolute;
     left: 780px;
     top: 120px;
+}
+
+.icones img{
+    width: 50px;
+    position: absolute;
+    left: 1300px;
+    top: 260px;
+}
+
+footer{
+    padding-left: 150px;
+    padding-top: 30px;
+}
+
+
+button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.b1{
+    color: black;
+    font-size: 20px;
+    width: 200px;
+    height: 50px;
+    background-color: rgba(218, 165, 32, 0);
+    margin-top: 20px;
+    border-radius: 0px;
+}
+
+.b2{
+    color: white;
+    font-size: 20px;
+    width: 200px;
+    height: 50px;
+    background-color: rgba(218, 165, 32, 0);
+    margin-top: -60px;
+    margin-left: -10px;
+    border-radius: 0px;
+}
+
+.pp1{
+    font-size: 20px;
+    margin-top: 1100px;
+    margin-left: -1400px;
+    transform: rotate(90deg);
+}
+
+.pp2{
+    color: white;
+    font-size: 20px;
+    margin-top: -1160px;
+    margin-left: 1140px;
+    transform: rotate(90deg);
 }
